[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "correlation-analysis"
version = "2.8.0"
description = "High-performance structural analysis for atomistic simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Isaías Rodríguez", email = "isurwars@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/Isurwars/Correlation"
Documentation = "https://isurwars.github.io/Correlation"
Repository = "https://github.com/Isurwars/Correlation"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON", "-DBUILD_TESTING=OFF"]
wheel.packages = ["python/correlation"]
build-dir = "build/{wheel_tag}"
