[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "correlation-analysis"
version = "3.6.0"
description = "High-performance structural analysis for atomistic simulations"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.9"
authors = [{name = "Isaías Rodríguez", email = "isurwars@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/Isurwars/Correlation"
Documentation = "https://isurwars.github.io/Correlation"
Repository = "https://github.com/Isurwars/Correlation"

[tool.scikit-build]
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_TESTING=OFF",
    "-DBUILD_GUI=OFF"
]
wheel.packages = ["python/correlation"]
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
# Build only Python 3.9 through 3.12+ (CPython)
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *musllinux*"

# Ensure we use manylinux_2_28 for C++23 compiler compatibility
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Global repair command using our custom repair_wheel.py script
repair-wheel-command = "python python/repair_wheel.py {wheel} {dest_dir}"

[tool.cibuildwheel.linux]
before-all = "dnf install -y gcc-toolset-13-gcc-c++"
environment = { CC="/opt/rh/gcc-toolset-13/root/usr/bin/gcc", CXX="/opt/rh/gcc-toolset-13/root/usr/bin/g++" }

[tool.cibuildwheel.windows]
# Delvewheel is required to vendor the compiled tbb.dll inside the Windows wheel
before-build = "pip install delvewheel"

