BIN_DIR = $(top_builddir)/bin
# Build correlation
bin_PROGRAMS = $(BIN_DIR)/correlation
# correlation Source Files
__BIN_DIR__correlation_SOURCES = Atom.cpp Cell.cpp Constants.cpp ReadFiles.cpp Smoothing.cpp main.cpp
# correlation ld flags
__BIN_DIR__correlation_CPPFLAGS = -Iinclude -std=c++23
__BIN_DIR__correlation_LDFLAGS = -lm
